--- a/contact.html
+++ b/contact.html
@@ -37,9 +37,7 @@
                             <a href="index.html" class="nav-item nav-link">Home</a>
                             <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                         </div>
-                        <!-- <div class="ml-auto">
-                            <a class="btn" href="contact.html">Contact Us</a>
-                        </div> -->
+                        <a href="index.html"> <img src="img/logo.PNG" style="width: 50px;"></a>
                     </div>
                 </nav>
             </div>
