--- a/index.html
+++ b/index.html
@@ -351,10 +351,7 @@
                     <div class="row">
                         <div class="col-md-6 col-lg-4">
                             <div class="footer-about">
-                                <h2>About Us</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu lectus a leo tristique dictum nec non quam. Suspendisse convallis, tortor eu placerat rhoncus, lorem quam iaculis felis, sed eleifend lacus neque id eros. Integer convallis volutpat neque
-                                </p>
+                                <a href="index.html"> <img src="img/logo.PNG" style="width: 50%;"></a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-8">
