--- a/real-estate-practice.html
+++ b/real-estate-practice.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8">
         <title>M/s D.Y. WANI & CO. ADVOCATES & LEGAL CONSULTANTS</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Law Firm Website Template" name="keywords">
-        <meta content="Law Firm Website Template" name="description">
-
+        <meta content="M/s D.Y. WANI & CO. ADVOCATES & LEGAL CONSULTANTS" name="keywords">
+        <meta content="M/s D.Y. WANI & CO. ADVOCATES & LEGAL CONSULTANTS" name="description">
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
 
