--- a/pfb-practice.html
+++ b/pfb-practice.html
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
                             <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="pfb-practice.html" class="nav-item nav-link">Practice</a>
+                            <a href="real-estate-practice.html" class="nav-item nav-link">Practice</a>
                             <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                         </div>
                         <a href="index.html"> <img src="img/logo.PNG" style="width: 50px;"></a>
@@ -65,26 +65,16 @@
             <div class="service">
                 <div class="container">
                     <div class="section-header">
-                        <h2>Corporate, Commercial, and Contracts</h2>
+                        <h2>Project Finance & Banking Laws</h2>
                     </div>
                     <div class="row">
                         <ol>
-                            <li class="numeric">We Provide extensive legal assistance in the Corporate,
-                                Commercial, and Contract Law sectors.                                
-                            </li>
-                            <li class="numeric">Our Team assists clients in:
-                                <ol class="alphabetic">
-                                 <li >Drafting and execution of legal documentation in relation to
-                                    shareholders agreements, joint venture agreements/technology
-                                    transfer agreements, and assignment agreements.                                    
-                                    </li>
-                                <li >Project Finance Documentation.</li>
-                                <li >Distributorship Agreements and B2B Contracts.</li>
-                                <li >Share Purchase/Share Subscription Agreements.</li>
-                                <li >Lease Agreements for Commercial Properties.</li>
-                                <li >Technology Transfer Agreements.</li>
-                                <li >Asset Acquisition Documentations.</li>
-                                </ol>
+                            <li class="numeric">Project Finance on a large scale basis are subject to certain challenges including framing structuring and financial conditions.</li>
+                            <li class="numeric">We provide regular advice with regard to various aspects of
+                                project finance from acting as Legal Advisors to Creditors and
+                                Developer Firms and assisting and drafting the necessary
+                                consortium documentation for the procurement of Finance for
+                                such projects.
                             </li>
                         </ol>
                     </div>
