--- a/real-estate-practice.html
+++ b/real-estate-practice.html
@@ -64,7 +64,7 @@
             <div class="service">
                 <div class="container">
                     <div class="section-header">
-                        <h2>REAL ESTATE</h2>
+                        <h2>Real Estate</h2>
                     </div>
                     <div class="row">
                         <ul style="font-family: emoji; color: black; margin-top: 10px;">
@@ -118,31 +118,39 @@
 
             <!-- Footer Start -->
             <div class="footer">
-                <div class="container">
+                <div class="container" style="max-width: 95%;">
                     <div class="row">
-                        <div class="col-md-6 col-lg-6">
+                        <div class="col-md-12 col-lg-2">
                             <div class="footer-about">
-                                <a href="index.html"> <img src="img/logo.PNG" style="width: 50%;"></a>
+                                <a href="index.html"> <img src="img/logo.PNG"></a>
                             </div>
                         </div>
-                        <div class="col-md-6 col-lg-6">
+                        <div class="col-md-12 col-lg-3">
                             <div class="row">
-                        <div class="col-md-6 col-lg-12">
-                            <div class="footer-contact">
-                                <h2>Get In Touch</h2>
-                                <p><i class="fa fa-phone-alt"></i>+91 9819929092, 9819909092</p>
-                                <p><i class="fa fa-envelope"></i>dywaniandco@gmail.com</p>
-                                <div class="footer-social">
-                                    <a href=""><i class="fab fa-twitter"></i></a>
-                                    <a href=""><i class="fab fa-facebook-f"></i></a>
-                                    <a href=""><i class="fab fa-youtube"></i></a>
-                                    <a href=""><i class="fab fa-instagram"></i></a>
-                                    <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                <div class="col-md-12 col-lg-12">
+                                    <div class="footer-contact">
+                                        <h2>Get In Touch</h2>
+                                        <p><i class="fa fa-phone-alt"></i>+91 9819929092, 9819909092</p>
+                                        <p><i class="fa fa-envelope"></i>dywaniandco@gmail.com</p>
+                                        <div class="footer-social">
+                                            <a href=""><i class="fab fa-twitter"></i></a>
+                                            <a href=""><i class="fab fa-facebook-f"></i></a>
+                                            <a href=""><i class="fab fa-youtube"></i></a>
+                                            <a href=""><i class="fab fa-instagram"></i></a>
+                                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-12 col-lg-3" style="margin-bottom: 20px;">
+                            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Sector 3, Kopar Khairane, Navi Mumbai, Maharashtra 400709&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph Download</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
                         </div>
-                    </div>
+                        <div class="col-md-12 col-lg-3"  style="margin-bottom: 20px;">
+                            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Rohit Chambers, N Sukhia St, Kala Ghoda, Fort, Mumbai, Maharashtra 400001&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph Download</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
+                        </div>
+                        
+                        
                     </div>
                 </div>
                 <div class="container copyright">
