--- a/real-estate-practice.html
+++ b/real-estate-practice.html
@@ -118,7 +118,7 @@
 
             <!-- Footer Start -->
             <div class="footer">
-                <div class="container" style="max-width: 95%;">
+                <div class="container" style="max-width: 90%;">
                     <div class="row">
                         <div class="col-md-12 col-lg-2">
                             <div class="footer-about">
@@ -143,14 +143,14 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-3" style="margin-bottom: 20px;">
-                            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Sector 3, Kopar Khairane, Navi Mumbai, Maharashtra 400709&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph Download</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
-                        </div>
                         <div class="col-md-12 col-lg-3"  style="margin-bottom: 20px;">
+                            <p style="color: white;">Rohit Chambers, N Sukhia St, Kala Ghoda, Fort, Mumbai, Maharashtra 400001</p>
                             <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Rohit Chambers, N Sukhia St, Kala Ghoda, Fort, Mumbai, Maharashtra 400001&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph Download</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
                         </div>
-                        
-                        
+                        <div class="col-md-12 col-lg-3" style="margin-bottom: 20px;">
+                            <p style="color: white;">Sector 3, Kopar Khairane, Navi Mumbai, Maharashtra 400709</p>
+                            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Sector 3, Kopar Khairane, Navi Mumbai, Maharashtra 400709&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph Download</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
+                        </div>
                     </div>
                 </div>
                 <div class="container copyright">
