--- a/index.html
+++ b/index.html
@@ -360,11 +360,11 @@
                                         <p><i class="fa fa-phone-alt"></i>+91 9819929092, 9819909092</p>
                                         <p><i class="fa fa-envelope"></i>dywaniandco@gmail.com</p>
                                         <div class="footer-social">
-                                            <a href=""><i class="fab fa-twitter"></i></a>
+                                            <!-- <a href=""><i class="fab fa-twitter"></i></a>
                                             <a href=""><i class="fab fa-facebook-f"></i></a>
                                             <a href=""><i class="fab fa-youtube"></i></a>
-                                            <a href=""><i class="fab fa-instagram"></i></a>
-                                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                            <a href=""><i class="fab fa-instagram"></i></a> -->
+                                            <a href="https://in.linkedin.com/in/devashish-wani-patil-95136394" target="_blank" style="color: white;"><i class="fab fa-linkedin-in"></i> Linkedin</a>
                                         </div>
                                     </div>
                                 </div>
@@ -375,7 +375,7 @@
                             <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Rohit Chambers, N Sukhia St, Kala Ghoda, Fort, Mumbai, Maharashtra 400001&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph Download</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
                         </div>
                         <div class="col-md-12 col-lg-3" style="margin-bottom: 20px;">
-                            <p style="color: white;">Sector 3, Kopar Khairane, Navi Mumbai, Maharashtra 400709</p>
+                            <p style="color: white;">268, SS-3, Sector-3, Koparkhairne, Navi Mumbai- 400 709</p>
                             <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=300&amp;height=300&amp;hl=en&amp;q=Sector 3, Kopar Khairane, Navi Mumbai, Maharashtra 400709&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://gachanymph.com/">Gacha Nymph Download</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;}</style></div>
                         </div>
                     </div>
@@ -383,10 +383,10 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; <a href="https://o2bizservices.com/">O2bizservices</a>, All Right Reserved.</p>
+                            <p>&copy; <a href="https://o2bizservices.com/" target="_blank">O2bizservices</a>, All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
-                            <p>Designed By <a href="https://o2bizservices.com/">O2bizservices</a></p>
+                            <p>Designed By <a href="https://o2bizservices.com/" target="_blank">O2bizservices</a></p>
                         </div>
                     </div>
                 </div>
