--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
                     <div class="row align-items-center">
                         <div class="col-lg-4 col-md-6" style="align-self: baseline;">
                             <div class="about-img" style="margin-bottom: 10px;">
-                                <img src="img/about.jpg" alt="Image">
+                                <img src="img/dewanshiwani.PNG" alt="Image">
                             </div>
                             <div class="about-img">
-                                <img src="img/about.jpg" alt="Image">
+                                <img src="img/dewanshiwani.PNG" alt="Image">
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-6">
@@ -215,7 +215,7 @@
                         <div class="wrapper">
                             <div class="practice-card">
                                 <div class="practice-box">
-                                    <img alt="" src="img/real-estate=portrait.png">
+                                    <img alt="" src="img/pfb-portrait.jpeg">
                                     <div class="practice-box-overlay">
                                         <h3>PROJECT FINANCE & BANKING LAWS</h3>
                                         <!-- <p>We Provide extensive legal assistance in the Corporate,Commercial, and Contract Law sectors.</p> -->
@@ -223,7 +223,7 @@
                                     </div>
                                 </div>
                                 <div class="practice-box">
-                                    <img alt="" src="img/real-estate=portrait.png">
+                                    <img alt="" src="img/ccc-portrait.jpeg">
                                     <div class="practice-box-overlay">
                                         <h3>Corporate, Commercial, and Contracts</h3>
                                         <!-- <p>We Provide extensive legal assistance in the Corporate,Commercial, and Contract Law sectors.</p> -->
@@ -231,7 +231,7 @@
                                     </div>
                                 </div>
                                 <div class="practice-box">
-                                    <img alt="" src="img/real-estate=portrait.png">
+                                    <img alt="" src="img/real-estate-portrait.jpeg">
                                     <div class="practice-box-overlay">
                                         <h3>REAL ESTATE</h3>
                                         <!-- <p>Real Estate is the booming sector in the world’s largest asset class.</p> -->
@@ -337,7 +337,7 @@
                         </div>
                         <div class="col-md-5">
                             <div class="feature-img">
-                                <img src="img/feature.png" alt="Feature">
+                                <img src="img/feature.jpg" alt="Feature">
                             </div>
                         </div>
                     </div>
