--- a/pfb-practice.html
+++ b/pfb-practice.html
@@ -58,7 +58,7 @@
             <!-- Page Header End -->
             <div class="container col-lg-6">
                 <div class="imgHover">
-                    <img src="img/PROJECT-FINANCE---BANKING-LAWS.png" alt="" width="80%">
+                    <img src="img/pfb.jpg" alt="" width="80%">
                 </div>
             </div>
             <!-- Service Start -->
