--- a/real-estate-practice.html
+++ b/real-estate-practice.html
@@ -57,7 +57,7 @@
             <!-- Page Header End -->
             <div class="container col-lg-6">
                 <div class="imgHover">
-                    <img src="img/real-estate.png" alt="" width="80%">
+                    <img src="img/real-estate.jpg" alt="" width="80%">
                 </div>
             </div>
             <!-- Service Start -->
